--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.6",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "countdown": "^2.6.0",
+    "local-storage": "^2.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "^2.1.3",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
