--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "ansi-html": "^0.0.7",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "countdown": "^2.6.0",
+    "fsevents": "^2.3.2",
+    "glob-parent": "^6.0.2",
+    "immer": "^9.0.7",
     "local-storage": "^2.0.0",
+    "merge": "^2.1.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
+    "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "sockjs": "^0.3.24",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -49,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.5.4"
   }
 }
