--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "my-app",
+  "name": "todo-gaming",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/pickers": "^3.3.10",
@@ -13,24 +15,23 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "ansi-html": "^0.0.7",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.6",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "countdown": "^2.6.0",
-    "fsevents": "^2.3.2",
-    "glob-parent": "^6.0.2",
-    "immer": "^9.0.7",
+    "framer-motion": "^5.5.5",
     "local-storage": "^2.0.0",
-    "merge": "^2.1.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
-    "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
-    "sockjs": "^0.3.24",
+    "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -56,8 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^4.5.4"
   }
 }
