--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-time-picker": "^4.0.2",
+    "react-time-picker": "^4.4.4"
   }
 }
