--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@types/react-time-picker": "^4.0.2",
-    "react-time-picker": "^4.4.4"
+    "react-time-picker": "^4.4.4",
+    "react-timezone-select": "^1.1.15"
   }
 }
