--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "countdown": "^2.6.0",
-    "framer-motion": "^5.5.5",
+    "framer-motion": "^4.1.17",
     "local-storage": "^2.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
-    "node-sass": "^7.0.1",
+    "node-sass": "^4.0.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "redux-persist": "^6.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
