--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "local-storage": "^2.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
-    "node-sass": "^4.0.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^4.0.0",
     "redux-persist": "^6.0.0",
+    "sass": "^1.45.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
