--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
-  "name": "todo-gaming",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/lab": "^5.0.0-alpha.62",
-    "@mui/material": "^5.2.6",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.6",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "countdown": "^2.6.0",
-    "framer-motion": "^4.1.17",
-    "local-storage": "^2.0.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
-    "prop-types": "^15.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "^4.0.0",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.45.2",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-time-picker": "^4.0.2",
-    "react-time-picker": "^4.4.4",
-    "react-timezone-select": "^1.1.15"
-  }
+    "name": "todo-gaming",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@chakra-ui/icons": "^1.1.1",
+        "@chakra-ui/react": "^1.7.3",
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@material-ui/pickers": "^3.3.10",
+        "@mui/icons-material": "^5.2.5",
+        "@mui/lab": "^5.0.0-alpha.62",
+        "@mui/material": "^5.2.6",
+        "@reduxjs/toolkit": "^1.7.1",
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.6",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "countdown": "^2.6.0",
+        "framer-motion": "^4.1.17",
+        "local-storage": "^2.0.0",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.34",
+        "prop-types": "^15.8.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "react-scripts": "^4.0.0",
+        "redux-persist": "^6.0.0",
+        "sass": "^1.45.2",
+        "typescript": "^4.5.4",
+        "web-vitals": "^2.1.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-time-picker": "^4.0.2",
+        "prettier": "2.5.1",
+        "react-time-picker": "^4.4.4",
+        "react-timezone-select": "^1.1.15"
+    }
 }
