--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "countdown": "^2.6.0",
+        "focus-visible": "^5.2.0",
         "framer-motion": "^4.1.17",
         "local-storage": "^2.0.0",
+        "luxon": "^2.3.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.34",
         "prop-types": "^15.8.0",
@@ -59,6 +61,7 @@
         ]
     },
     "devDependencies": {
+        "@types/luxon": "^2.0.8",
         "@types/react-time-picker": "^4.0.2",
         "prettier": "2.5.1",
         "react-time-picker": "^4.4.4",
