--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^17.0.6",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "autosize": "^5.0.1",
         "countdown": "^2.6.0",
         "focus-visible": "^5.2.0",
         "framer-motion": "^4.1.17",
@@ -28,6 +29,7 @@
         "moment-timezone": "^0.5.34",
         "prop-types": "^15.8.0",
         "react": "^17.0.2",
+        "react-countdown": "^2.3.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-scripts": "^4.0.0",
@@ -61,9 +63,11 @@
         ]
     },
     "devDependencies": {
+        "@types/autosize": "^4.0.1",
         "@types/luxon": "^2.0.8",
         "@types/react-time-picker": "^4.0.2",
         "prettier": "2.5.1",
+        "react-textarea-autosize": "^8.3.3",
         "react-time-picker": "^4.4.4",
         "react-timezone-select": "^1.1.15"
     }
