Switch names from chocotodo to chocodo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Chocotodo",
-    "name": "Chocotodo",
+    "short_name": "Chocodo",
+    "name": "Chocodo",
     "icons": [
         {
             "src": "chocobo-icon.ico",
