--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-scripts": "^4.0.0",
+        "react-select": "^5.2.1",
         "redux-persist": "^6.0.0",
         "sass": "^1.45.2",
         "typescript": "^4.5.4",
