--- a/package.json
+++ b/package.json
@@ -60,6 +60,16 @@
         "@types/autosize": "^4.0.1",
         "@types/luxon": "^2.0.8",
         "@types/react-time-picker": "^4.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.9.1",
+        "@typescript-eslint/parser": "^5.9.1",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^5.2.0",
+        "eslint-plugin-react": "^7.28.0",
         "prettier": "2.5.1",
         "react-textarea-autosize": "^8.3.3",
         "react-time-picker": "^4.4.4",
