--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
         "framer-motion": "^4.1.17",
         "luxon": "^2.3.0",
         "prop-types": "^15.8.0",
-        "react": "^17.0.2",
+        "react": "^16.9.0",
         "react-countdown": "^2.3.2",
-        "react-dom": "^17.0.2",
+        "react-dom": "^16.8.0",
         "react-redux": "^7.2.6",
         "react-scripts": "^4.0.0",
         "react-select": "^5.2.1",
+        "react-useanimations": "^2.0.8",
         "redux-persist": "^6.0.0",
         "sass": "^1.45.2",
         "typescript": "^4.5.4",
