--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prop-types": "^15.8.0",
         "react": "^16.9.0",
         "react-countdown": "^2.3.2",
+        "react-device-detect": "^2.1.2",
         "react-dom": "^16.8.0",
         "react-redux": "^7.2.6",
         "react-scripts": "^4.0.0",
